...
            modifier = modifier.fillMaxWidth()
                .padding(16.dp)
                .verticalScroll(vertScroll),
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
            MainHeader(
                text = "Profile",
                modifier = Modifier.align(Alignment.Start)
            )
            Spacer(modifier = Modifier.height(32.dp))
            ProfileAvatarAndName()
            Spacer(modifier = Modifier.height(32.dp))
            ProfileEngagementCountCard(
                modifier = Modifier.fillMaxWidth(),
                items = listOf(
                    ProfileEngagementCountItemState(16, "Hearted"),
                    ProfileEngagementCountItemState(11, "Friends"),
                    ProfileEngagementCountItemState(6, "Days"),
                )
            )
            Spacer(modifier = Modifier.height(16.dp))
            Row(
                modifier = modifier.fillMaxWidth(),
...
